--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 <div class="mainContainer">
     <h1>Facebook</h1>
     <p>this is a social website connect </p>
-</div>
+
 <div class="rightside">
     <input type="text" class="name"placeholder="Email or phone number" required>
     <input type="password" class="password"placeholder="password" required>
-    <button>login</button>
+    <button type="submit">login</button>
     <a href="http://www.facebook.com">forgot password</a>
     <hr>
-    <button>create new account</button>
+    <button type="submit">create new account</button>
 </div>
-
+</div>
 
 
 </body>
